--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Acme', sans-serif;
     background-color: white;
-    color: rgb(255, 72, 0);
+    /*color: rgb(255, 72, 0);*/
     text-align: center;
     margin: 0; 
     
